force-app/main/default/objects/Tache_Planifiee__c/Tache_Planifiee__c.object-meta.xml
<CustomObject>
    <label>Tâche planifiée</label>
    <nameField>
        <displayFormat>TAC-{000000}</displayFormat>
        <label>Tâches planifiées Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tâches Planifiées</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>