force-app/main/default/objects/Tache_Planifiee__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Tâches Planifiées</relationshipLabel>
    <relationshipName>Taches_Planifiees</relationshipName>
    <type>Lookup</type>
</CustomField>