force-app/main/default/objects/Tache_Planifiee__c/fields/Creer_tache_aujourdhui__c.field-meta.xml
<CustomField>
    <fullName>Creer_tache_aujourdhui__c</fullName>
    <formula>IF(Date_planifiee__c = TODAY(),true,false)</formula>
    <label>Tâche à créer aujourd&apos;hui</label>
    <type>Checkbox</type>
</CustomField>