force-app/main/default/objects/Tache_Planifiee__c/fields/Date_butoir__c.field-meta.xml
<CustomField>
    <fullName>Date_butoir__c</fullName>
    <formula>IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Avant&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Opportunite_Date_Debut_Campagne&apos;),Opportunity__r.CampaignStartDate__c - Template_de_tache__r.Nombre_Jours__c,
IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Apres&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Opportunite_Date_Debut_Campagne&apos;),Opportunity__r.CampaignStartDate__c + Template_de_tache__r.Nombre_Jours__c,
IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Avant&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Requete_Date_Debut_Campagne&apos;), Case__r.StartDate__c - Template_de_tache__r.Nombre_Jours__c,
IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Apres&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Requete_Date_Debut_Campagne&apos;), Case__r.StartDate__c + Template_de_tache__r.Nombre_Jours__c,
IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Avant&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Requete_Date_Fin_Campagne&apos;), Case__r.EndDate__c - Template_de_tache__r.Nombre_Jours__c,
IF(ISPICKVAL(Template_de_tache__r.Avant_Apres__c, &apos;Apres&apos;) &amp;&amp; ISPICKVAL(Template_de_tache__r.Evenement__c,&apos;Requete_Date_Fin_Campagne&apos;), Case__r.EndDate__c + Template_de_tache__r.Nombre_Jours__c,
 Null
))))))</formula>
    <label>Date butoir</label>
    <type>Date</type>
</CustomField>