force-app/main/default/objects/Tache_Planifiee__c/fields/Date_planifiee__c.field-meta.xml
<CustomField>
    <fullName>Date_planifiee__c</fullName>
    <formula>IF (ISPICKVAL(Template_de_tache__r.Declencheur_Avant_Apres__c, &apos;Avant&apos;) &amp;&amp;  ISPICKVAL(Template_de_tache__r.Declencheur__c,&apos;Debut_Campagne&apos;) &amp;&amp;  Template_de_tache__r.Objet__c = &apos;Opportunity&apos;,  Opportunity__r.CampaignStartDate__c -  Template_de_tache__r.Declencheur_Nb_jours__c,
IF (ISPICKVAL(Template_de_tache__r.Declencheur_Avant_Apres__c, &apos;Avant&apos;) &amp;&amp;  ISPICKVAL(Template_de_tache__r.Declencheur__c,&apos;Debut_Campagne&apos;)  &amp;&amp;  Template_de_tache__r.Objet__c = &apos;Case&apos;,  Case__r.StartDate__c -  Template_de_tache__r.Declencheur_Nb_jours__c,
IF (ISPICKVAL(Template_de_tache__r.Declencheur_Avant_Apres__c, &apos;Apres&apos;) &amp;&amp;  ISPICKVAL(Template_de_tache__r.Declencheur__c,&apos;Debut_Campagne&apos;) &amp;&amp;  Template_de_tache__r.Objet__c = &apos;Case&apos;,  Case__r.StartDate__c +  Template_de_tache__r.Declencheur_Nb_jours__c,
IF (ISPICKVAL(Template_de_tache__r.Declencheur_Avant_Apres__c, &apos;Avant&apos;) &amp;&amp;  ISPICKVAL(Template_de_tache__r.Declencheur__c,&apos;Fin_Campagne&apos;) &amp;&amp;  Template_de_tache__r.Objet__c = &apos;Case&apos;,  Case__r.EndDate__c -  Template_de_tache__r.Declencheur_Nb_jours__c,
IF (ISPICKVAL(Template_de_tache__r.Declencheur_Avant_Apres__c, &apos;Apres&apos;) &amp;&amp;  ISPICKVAL(Template_de_tache__r.Declencheur__c,&apos;Fin_Campagne&apos;) &amp;&amp;  Template_de_tache__r.Objet__c = &apos;Case&apos;,  Case__r.EndDate__c +  Template_de_tache__r.Declencheur_Nb_jours__c,
Null)))))</formula>
    <label>Date planifiée</label>
    <type>Date</type>
</CustomField>