force-app/main/default/objects/Tache_Planifiee__c/fields/Debug_Date__c.field-meta.xml
<CustomField>
    <fullName>Debug_Date__c</fullName>
    <formula>TEXT(Template_de_tache__r.Declencheur_Avant_Apres__c) + &apos;   &apos; + TEXT(Template_de_tache__r.Declencheur__c) + &apos;Template_de_tache__r.Type_enregistrement__c&apos;</formula>
    <label>Debug Date</label>
    <type>Text</type>
</CustomField>