force-app/main/default/objects/Tache_Planifiee__c/fields/Objet__c.field-meta.xml
<CustomField>
    <fullName>Objet__c</fullName>
    <formula>Template_de_tache__r.Objet__c</formula>
    <label>Objet</label>
    <type>Text</type>
</CustomField>