force-app/main/default/objects/Tache_Planifiee__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tâches Planifiées</relationshipLabel>
    <relationshipName>Taches_Planifiees</relationshipName>
    <type>Lookup</type>
</CustomField>