force-app/main/default/objects/Tache_Planifiee__c/fields/Raison_Echec__c.field-meta.xml
<CustomField>
    <fullName>Raison_Echec__c</fullName>
    <label>Raison d&apos;échec</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>