force-app/main/default/objects/Tache_Planifiee__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planifiee</fullName>
                <label>Planifiée</label>
            </value>
            <value>
                <fullName>Tâche créée</fullName>
            </value>
            <value>
                <fullName>Echec de création</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>