force-app/main/default/objects/Tache_Planifiee__c/fields/Template_de_tache__c.field-meta.xml
<CustomField>
    <fullName>Template_de_tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template de tâche</label>
    <referenceTo>TacheTemplate__c</referenceTo>
    <relationshipLabel>Tâches Planifiées</relationshipLabel>
    <relationshipName>Taches_Planifiees</relationshipName>
    <type>Lookup</type>
</CustomField>