force-app/main/default/objects/Tache_Planifiee__c/fields/Titre_tache__c.field-meta.xml
<CustomField>
    <fullName>Titre_tache__c</fullName>
    <formula>Template_de_tache__r.Titre_tache__c</formula>
    <label>Titre tâche</label>
    <type>Text</type>
</CustomField>